--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pszu-parsel",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://aleksey-prokopchuk.github.io/szu-parsel",
+  "homepage": "https://github.com/aleksey-prokopchuk/szu-parsel",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
