--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pszu-parsel",
+  "name": "szu-parsel",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://github.com/aleksey-prokopchuk/szu-parsel",
